--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "from src.data_local import MergedDataPreprocessing\n",
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:32:16.359435900Z",
-     "start_time": "2024-09-11T16:32:06.508416600Z"
+     "end_time": "2024-10-12T23:32:18.840080400Z",
+     "start_time": "2024-10-12T23:32:18.832633500Z"
     }
    }
   },
@@ -29,22 +29,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.21824072214796"
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dir_date_day = '31-08'; last_date_str = '2024-07-10'"
+    "df1 = pd.read_parquet('data/03-09-2024/df.parquet')\n",
+    "df1.ICD10.isna().mean()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:32:16.366441600Z",
-     "start_time": "2024-09-11T16:32:16.360433500Z"
+     "end_time": "2024-10-12T23:32:36.267771300Z",
+     "start_time": "2024-10-12T23:32:20.730991700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1190227"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-12T23:32:36.334106900Z",
+     "start_time": "2024-10-12T23:32:36.280968200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "dir_date_day = '03-09'; last_date_str = '2024-07-10'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-12T23:32:36.407871200Z",
+     "start_time": "2024-10-12T23:32:36.286954400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "df_original = get_cashed_input(dir_date_day= dir_date_day,last_date_str= last_date_str)"
@@ -52,44 +101,44 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:32:31.695037600Z",
-     "start_time": "2024-09-11T16:32:16.366441600Z"
+     "end_time": "2024-10-12T23:32:54.226010300Z",
+     "start_time": "2024-10-12T23:32:36.407871200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "outputs": [
     {
      "data": {
-      "text/plain": "320054"
+      "text/plain": "(295557, 0.15483307788345396)"
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df_original)"
+    "len(df_original),df_original.ICD10.isna().mean()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:32:31.710747100Z",
-     "start_time": "2024-09-11T16:32:31.697033500Z"
+     "end_time": "2024-10-12T23:32:54.614274500Z",
+     "start_time": "2024-10-12T23:32:54.234153300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "outputs": [
     {
      "data": {
-      "text/plain": "OUTCOME\nAPPROVED    160428\nREJECTED    137130\nPARTIAL      22496\nName: count, dtype: int64"
+      "text/plain": "OUTCOME\nAPPROVED    158119\nREJECTED    115461\nPARTIAL      21977\nName: count, dtype: int64"
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,14 +149,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:33:03.286610800Z",
-     "start_time": "2024-09-11T16:33:03.240707400Z"
+     "end_time": "2024-10-12T23:32:55.495605200Z",
+     "start_time": "2024-10-12T23:32:54.617321600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
@@ -125,20 +174,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:33:38.848247400Z",
-     "start_time": "2024-09-11T16:33:38.786537900Z"
+     "end_time": "2024-10-12T23:32:55.998113700Z",
+     "start_time": "2024-10-12T23:32:55.508245Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "outputs": [
     {
      "data": {
-      "text/plain": "50205"
+      "text/plain": "45762"
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,14 +198,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:33:48.298789200Z",
-     "start_time": "2024-09-11T16:33:48.281172800Z"
+     "end_time": "2024-10-12T23:32:56.106602700Z",
+     "start_time": "2024-10-12T23:32:56.002131900Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "outputs": [],
    "source": [
     "df_ref = pd.read_parquet('data/utilities/reference_format/reference.parquet')\n",
@@ -171,14 +220,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:34:40.265541400Z",
-     "start_time": "2024-09-11T16:34:39.729899300Z"
+     "end_time": "2024-10-12T23:32:58.928883900Z",
+     "start_time": "2024-10-12T23:32:56.109623600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
@@ -275,6 +324,7 @@
       "QTY_STOCKED_UOM : int64\n",
       "UNIT_PRICE : float64\n",
       "OASIS_IOS_DESCRIPTION : object\n",
+      "OASIS_IOS_CODE : object\n",
       "SEQUENCE_NO : int64\n",
       "UNIT_PRICE_STOCKED_UOM : float64\n",
       "UNIT_PRICE_NET : float64\n",
@@ -284,7 +334,11 @@
       "APPROVED_QUNATITY : float64\n",
       "ICD10 : object\n",
       "Diagnosis_Key : object\n",
-      "Chief_Complaint : object\n"
+      "Chief_Complaint : object\n",
+      "PUR_NAME : object\n",
+      "POLICY_CODE : object\n",
+      "POLICY_NAME : object\n",
+      "CONTRACT_NAME : object\n"
      ]
     }
    ],
@@ -295,61 +349,61 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:34:41.904216500Z",
-     "start_time": "2024-09-11T16:34:41.885797800Z"
+     "end_time": "2024-10-12T23:32:58.944096900Z",
+     "start_time": "2024-10-12T23:32:58.932901500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "preprocessing = MergedDataPreprocessing(df_original)\n",
     "\n",
-    "df_train, df_test = preprocessing.train_test_split_time(id_column='CREATION_DATE',test_size=0.2)"
+    "df_train, df_test = preprocessing.train_test_split_time()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:35:05.374830100Z",
-     "start_time": "2024-09-11T16:35:04.250363200Z"
+     "end_time": "2024-10-12T23:33:00.984672100Z",
+     "start_time": "2024-10-12T23:32:58.946341100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.25000097639849556"
+      "text/plain": "0.25"
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(df_test)/ len(df_train)"
+    "round(len(df_test)/ len(df_train),3)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:35:10.601382100Z",
-     "start_time": "2024-09-11T16:35:10.585717800Z"
+     "end_time": "2024-10-12T23:33:01.023506200Z",
+     "start_time": "2024-10-12T23:33:01.005150Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "outputs": [
     {
      "data": {
-      "text/plain": "[254721]"
+      "text/plain": "[254276]"
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,14 +417,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:35:11.314352100Z",
-     "start_time": "2024-09-11T16:35:10.984071600Z"
+     "end_time": "2024-10-12T23:33:01.372773600Z",
+     "start_time": "2024-10-12T23:33:01.018489500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
+   "outputs": [],
+   "source": [
+    "df_train.PURCHASER_CODE = df_train.PURCHASER_CODE.astype(str).tolist()\n",
+    "df_train.CONTRACT_NO = df_train.CONTRACT_NO.astype(str).tolist()\n",
+    "df_train.DOCTOR_LICENSE = df_train.DOCTOR_LICENSE.astype(str).tolist()\n",
+    "\n",
+    "df_test.PURCHASER_CODE = df_test.PURCHASER_CODE.astype(str).tolist()\n",
+    "df_test.CONTRACT_NO = df_test.CONTRACT_NO.astype(str).tolist()\n",
+    "df_test.DOCTOR_LICENSE = df_test.DOCTOR_LICENSE.astype(str).tolist()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-12T23:33:01.573573300Z",
+     "start_time": "2024-10-12T23:33:01.378014500Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "outputs": [],
    "source": [
     "path_date = f'data/{dir_date_day}-2024'; train_prq = path_date + '/train.parquet';test_prq = path_date + '/test.parquet'\n",
@@ -381,20 +456,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:35:30.063116400Z",
-     "start_time": "2024-09-11T16:35:25.173730400Z"
+     "end_time": "2024-10-12T23:33:04.872232Z",
+     "start_time": "2024-10-12T23:33:01.576566700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['REQUEST_DATE', 'VISIT_NO', 'VISIT_DATE', 'EMERGENCY_INDICATOR', 'PROVIDER_DEPARTMENT_CODE', 'PROVIDER_DEPARTMENT', 'DOCTOR_SPECIALTY_CODE', 'DOCTOR_CODE', 'PATIENT_NO', 'EPISODE_NO', 'PATIENT_ID', 'MEMBERSHIP_NO', 'PATIENT_ID_TYPE', 'PATIENT_NATIONAL_IQAMA_ID', 'PATIENT_DOB', 'PATIENT_AGE', 'UNIT_OF_AGE', 'PATIENT_NATIONALITY', 'PATIENT_MARITAL_STATUS', 'PATIENT_GENDER', 'PATIENT_MOBILE_NO', 'PATIENT_BADGE_NO', 'HIS_INSURANCE_CODE', 'POLICY_HOLDER_NO', 'CLAIM_TYPE', 'BATCH_NO', 'TOTAL_CLAIMED_AMOUNT', 'TOTAL_CLAIMED_AMOUNT_SAR', 'TOTAL_NET_AMOUNT', 'TOTAL_DISCOUNT', 'TOTAL_DEDUCTIBLE', 'TOTAL_PATIENT_VATAMOUNT', 'TOTAL_NET_VAT_AMOUNT', 'CLAIM_NO', 'STAT_END_DATE', 'AMEND_BY_USER', 'AMEND_LAST_DATE', 'PAYER_LICENSE', 'DOCTOR_LICENSE', 'DEPARTMENT_TYPE', 'TREATMENT_TYPE', 'CLAIM_INVOICE_NO', 'STAT_INVOICE_NO', 'PURCHASER_CODE', 'STATUS', 'API_TRANS_ID', 'SUBMIT_CLAIM_OUTCOME', 'SUBMIT_CLAIM_MESSAGE', 'RES_STATUS', 'RES_CLAIM_ID', 'CONSULTATION_INVOICE_NO', 'TREATMENT_SUB_TYPE', 'ELIGIBILITY_RESPONSE_ID', 'ELIGIBILITY_RESPONSE_SYSTEM', 'CONTRACT_NO', 'ELIGIBILITY_API_TRANS_ID', 'CLAIM_IDENTIFIER', 'ATTACHED_FILES', 'ATTACHMENT_TYPE', 'NEW_BORN', 'PATIENT_IDENTITY_TYPE', 'BILLABLE_PERIOD_START', 'BILLABLE_PERIOD_END', 'BATCH_PERIOD_START', 'BATCH_PERIOD_END', 'CREATED_BY_USER', 'CREATION_DATE', 'VISIT_ID', 'NET_WITH_VAT', 'SERVICE_DESCRIPTION', 'LINE_CLAIMED_AMOUNT', 'LINE_CLAIMED_AMOUNT_SAR', 'CO_PAY', 'CO_INSURANCE', 'LINE_ITEM_DISCOUNT', 'NET_AMOUNT', 'NET_VAT_AMOUNT', 'PATIENT_VAT_AMOUNT', 'VAT_PERCENTAGE', 'TREATMENT_TYPE_INDICATOR', 'SERVICE_TYPE', 'SERVICE_CATEGORY', 'DURATION', 'UNIT', 'UNIT_TYPE', 'TIMES', 'PER', 'QTY', 'QTY_STOCKED_UOM', 'UNIT_PRICE', 'OASIS_IOS_DESCRIPTION', 'SEQUENCE_NO', 'UNIT_PRICE_STOCKED_UOM', 'UNIT_PRICE_NET', 'DISCOUNT_PERCENTAGE', 'NOTES', 'OUTCOME', 'APPROVED_QUNATITY', 'ICD10', 'Diagnosis_Key', 'Chief_Complaint']\n"
+      "['REQUEST_DATE', 'VISIT_NO', 'VISIT_DATE', 'EMERGENCY_INDICATOR', 'PROVIDER_DEPARTMENT_CODE', 'PROVIDER_DEPARTMENT', 'DOCTOR_SPECIALTY_CODE', 'DOCTOR_CODE', 'PATIENT_NO', 'EPISODE_NO', 'PATIENT_ID', 'MEMBERSHIP_NO', 'PATIENT_ID_TYPE', 'PATIENT_NATIONAL_IQAMA_ID', 'PATIENT_DOB', 'PATIENT_AGE', 'UNIT_OF_AGE', 'PATIENT_NATIONALITY', 'PATIENT_MARITAL_STATUS', 'PATIENT_GENDER', 'PATIENT_MOBILE_NO', 'PATIENT_BADGE_NO', 'HIS_INSURANCE_CODE', 'POLICY_HOLDER_NO', 'CLAIM_TYPE', 'BATCH_NO', 'TOTAL_CLAIMED_AMOUNT', 'TOTAL_CLAIMED_AMOUNT_SAR', 'TOTAL_NET_AMOUNT', 'TOTAL_DISCOUNT', 'TOTAL_DEDUCTIBLE', 'TOTAL_PATIENT_VATAMOUNT', 'TOTAL_NET_VAT_AMOUNT', 'CLAIM_NO', 'STAT_END_DATE', 'AMEND_BY_USER', 'AMEND_LAST_DATE', 'PAYER_LICENSE', 'DOCTOR_LICENSE', 'DEPARTMENT_TYPE', 'TREATMENT_TYPE', 'CLAIM_INVOICE_NO', 'STAT_INVOICE_NO', 'PURCHASER_CODE', 'STATUS', 'API_TRANS_ID', 'SUBMIT_CLAIM_OUTCOME', 'SUBMIT_CLAIM_MESSAGE', 'RES_STATUS', 'RES_CLAIM_ID', 'CONSULTATION_INVOICE_NO', 'TREATMENT_SUB_TYPE', 'ELIGIBILITY_RESPONSE_ID', 'ELIGIBILITY_RESPONSE_SYSTEM', 'CONTRACT_NO', 'ELIGIBILITY_API_TRANS_ID', 'CLAIM_IDENTIFIER', 'ATTACHED_FILES', 'ATTACHMENT_TYPE', 'NEW_BORN', 'PATIENT_IDENTITY_TYPE', 'BILLABLE_PERIOD_START', 'BILLABLE_PERIOD_END', 'BATCH_PERIOD_START', 'BATCH_PERIOD_END', 'CREATED_BY_USER', 'CREATION_DATE', 'VISIT_ID', 'NET_WITH_VAT', 'SERVICE_DESCRIPTION', 'LINE_CLAIMED_AMOUNT', 'LINE_CLAIMED_AMOUNT_SAR', 'CO_PAY', 'CO_INSURANCE', 'LINE_ITEM_DISCOUNT', 'NET_AMOUNT', 'NET_VAT_AMOUNT', 'PATIENT_VAT_AMOUNT', 'VAT_PERCENTAGE', 'TREATMENT_TYPE_INDICATOR', 'SERVICE_TYPE', 'SERVICE_CATEGORY', 'DURATION', 'UNIT', 'UNIT_TYPE', 'TIMES', 'PER', 'QTY', 'QTY_STOCKED_UOM', 'UNIT_PRICE', 'OASIS_IOS_DESCRIPTION', 'OASIS_IOS_CODE', 'SEQUENCE_NO', 'UNIT_PRICE_STOCKED_UOM', 'UNIT_PRICE_NET', 'DISCOUNT_PERCENTAGE', 'NOTES', 'OUTCOME', 'APPROVED_QUNATITY', 'ICD10', 'Diagnosis_Key', 'Chief_Complaint', 'PUR_NAME', 'POLICY_CODE', 'POLICY_NAME', 'CONTRACT_NAME']\n"
      ]
     }
    ],
@@ -404,14 +479,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:35:30.070273200Z",
-     "start_time": "2024-09-11T16:35:30.064113300Z"
+     "end_time": "2024-10-08T14:43:25.232978700Z",
+     "start_time": "2024-10-08T14:43:25.214021100Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "df_original.to_csv(f'data/{dir_date_day}-2024/df.csv',index=False)"
@@ -419,8 +494,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-09-11T16:35:58.089894200Z",
-     "start_time": "2024-09-11T16:35:31.266012500Z"
+     "end_time": "2024-10-08T14:43:47.008171700Z",
+     "start_time": "2024-10-08T14:43:25.235846500Z"
     }
    }
   },
